bug: butttom of the screen is not reachable on smaller screens.

--- a/react_ws_src/src/sass/_layout.scss
+++ b/react_ws_src/src/sass/_layout.scss
@@ -27,6 +27,5 @@ html, body {
 	padding-top:90px;
 	padding-bottom:45px;
 	//overflow:scroll;
-	min-height:100%;
 	// overflow:hidden;
 }
