--- a/react_ws_src/src/sass/main.scss
+++ b/react_ws_src/src/sass/main.scss
@@ -79,7 +79,6 @@ a {
 ////////////////////////////////////////////////////////////////////// MAIN CONTENT
 section#main_content {
 	position: relative;
-	height:100%;
 }
 
 ////////////////////////////////////////////////////////////////////// FOOTER
